Fix cards box-shadow from being cut on mobile

--- a/version_control/Codurance_September2020/css/modules/simple-card.css
+++ b/version_control/Codurance_September2020/css/modules/simple-card.css
@@ -12,6 +12,7 @@
         grid-auto-flow: column;
         overflow-x: auto;
         scroll-snap-type: x mandatory;
+        padding-bottom: 10px;
     }
 {% endcall %}
 
